package rename, logging, exceptions and fixes to edit requests
