# midi-manager/src/main/java/com/example/midimanager/model/Midi.java
@@ -1,0 +1,17 @@
+package com.example.midimanager.model;
+
+import java.time.ZonedDateTime;
+import java.util.UUID;
+
+public record Midi(
+    UUID midiId,
+    UUID blobRef,
+    UUID userRef,
+    boolean isPrivate,
+    String filename,
+    String artist,
+    String title,
+    ZonedDateTime dateCreated,
+    ZonedDateTime dateEdited
+) {
+}
