# midi-manager/src/main/java/com/example/midimanager/model/MidiAndBlob.java
@@ -1,0 +1,4 @@
+package com.example.midimanager.model;
+
+public record MidiAndBlob(Midi metaData, Blob blob) {
+}
