# midi-manager/src/main/java/com/example/springbootapp/model/MidiAndBlob.java
@@ -1,4 +1,0 @@
-package com.example.springbootapp.model;
-
-public record MidiAndBlob(Midi metaData, Blob blob) {
-}
